--- a/4.0.md
+++ b/4.0.md
@@ -1,1 +1,16 @@
-webpack4.0
+# webpack4.0
+### 笔记
+   
+      相较2.0升级到3.0，这一次4.0的升级有些变化，新加入了0配置的机制，试了一下，0配置的机制只适合很小的项目吧，搞个后台真的不ok，还是得走配置。<br/>
+      
+      目前4.0虽然发布了但是插件的支持还在完善。举例几个显著的变化吧：<br/>
+      
+      1.新增了mode属性，不写不影响功能，会引起警告<br/><br/>
+      2.打包时CommonsChunkPlugin需要替换成config.optimization.splitChunks，这个是写在配置中不再是插件，[如何配置](https://gist.github.com/sokra/1522d586b8e5c0f5072d7565c2bee693)<br/><br/>
+      3.就我的脚手架[soptlight](https://github.com/yuminjustin/spotlight-cli)而言，必须升级插件：html-webpack-plugin、webpack-dev-server、extract-text-webpack-plugin（4.0beta），加装包：webpack-cli<br/><br/><br/>
+      
+      
+      现在工作中还是使用稳定的webpack3吧<br/>
+      
+      （2018/03/20）
+      
