--- a/4.0.md
+++ b/4.0.md
@@ -6,11 +6,57 @@
       目前4.0虽然发布了但是插件的支持还在完善。举例几个显著的变化吧：<br/>
       
       1.新增了mode属性，不写不影响功能，会引起警告<br/><br/>
-      2.打包时CommonsChunkPlugin需要替换成config.optimization.splitChunks，这个是写在配置中不再是插件，[如何配置](https://gist.github.com/sokra/1522d586b8e5c0f5072d7565c2bee693)<br/><br/>
+      2.打包时CommonsChunkPlugin需要替换成config.optimization.splitChunks，这个是写在配置中不再是插件，[配置详解](https://gist.github.com/sokra/1522d586b8e5c0f5072d7565c2bee693)<br/><br/>
+      
+      
+      ==原来==
+      
+           plugins:{
+             new webpack.optimize.CommonsChunkPlugin({
+               name: 'vendor',
+               minChunks: function (module) {
+                 return (
+                   module.resource &&/\.js$/.test(module.resource) && module.resource.indexOf(
+                     path.join(__dirname, '../../node_modules')
+                     ) === 0
+                  )
+               }
+             }),
+             new webpack.optimize.CommonsChunkPlugin({
+               name: 'manifest',
+               chunks: ['vendor']
+             }),
+             ......
+           }
+
+      ==4.0==
+      
+         optimization: {
+           splitChunks: {
+               chunks: "async",
+               minSize: 30000,
+               minChunks: 1,
+               maxAsyncRequests: 5,
+               maxInitialRequests: 3,
+               name: true,
+               cacheGroups: {
+                   default: {
+                       minChunks: 2,
+                       priority: -20,
+                       reuseExistingChunk: true,
+                   },
+                   vendors: {
+                       test: /[\\/]node_modules[\\/]/,
+                       priority: -10
+                   }
+               }
+           }
+       }
+      
+      
       3.就我的脚手架[soptlight](https://github.com/yuminjustin/spotlight-cli)而言，必须升级插件：html-webpack-plugin、webpack-dev-server、extract-text-webpack-plugin（4.0beta），加装包：webpack-cli<br/><br/><br/>
       
       
       现在工作中还是使用稳定的webpack3吧<br/>
       
-      （2018/03/20）
-      
+     （2018/03/20）
